Fix the z-index issue when hovering on projects

--- a/src/Components/Modal.css
+++ b/src/Components/Modal.css
@@ -16,6 +16,7 @@
     height: auto;
     min-height: 100vh;
     opacity: 0.6;
+    z-index: 20;
 }
 
 .modalContent {
